--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Rate our Support</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&family=Merriweather+Sans:wght@400;500;700&family=Poppins&display=swap" rel="stylesheet">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <div class="card">
+    <div class="star"></div>
+    <h1>How did we do?</h1>
+    <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our
+      offering!</p>
+    <ul class="options">
+      <li>
+        <label>
+
+          <input type="radio" name="grade">
+          <span>1</span>
+        </label>
+      </li>
+      <li>
+        <label>
+          <input type="radio" name="grade">
+          <span>
+            2</span>
+        </label>
+      </li>
+      <li><label>
+          <input type="radio" name="grade">
+          <span>3</span>
+        </label></li>
+      <li>
+        <label>
+          <input type="radio" name="grade">
+          <span>4</span>
+        </label>
+      </li>
+      <li><label>
+          <input type="radio" name="grade">
+          <span>5</span>
+        </label></li>
+    </ul>
+    <button>Submit</button>
+  </div>
+
+</body>
+
+</html>
